--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cadst.css">
+    <link rel="stylesheet" href="cadastro.css">
     <script src="jquery-2.1.4.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,10 +21,10 @@
     <div class="container">
         <div class="cover">
           <div class="front">
-            <img src="images/banner 2.png" alt="Imagem Frontal">
+            <img src="images/banner 2.png">
             <div class="text">
-              <span class="text-1">... <br> ...</span>
-              <span class="text-2">Conecte-se</span>
+              <span class="text-1"><em>"Um clique,</em> <br> <em>vidas transformadas"</em></span>
+              <span class="text-2">Crie sua Conta já</span>
             </div>
         </div>
         </div>
@@ -32,7 +32,7 @@
             <div class="form-content">
               <div class="login-form">
                 <div class="title">Conecte-se</div>
-                <p>Primeiramente, escolha qual a opção melhor se encaixa no seu perfil</p>
+                <p>Primeiramente, escolha qual opção melhor se encaixa no seu perfil</p>
               <form action="#">
                 <div class="input-boxes">
                   <div class="button input-box">
@@ -42,6 +42,7 @@
                 </div>
             </form>
             <div class="social-media">
+              <p class="enct">Onde você pode nos encontrar</p>
                 <ul class="list-social-media">
                     <a class="link-social-media" target="_blank" href="https://github.com/Ematch-TCE">
                         <li class="item-social-media">
@@ -50,16 +51,15 @@
                     </a>
                     <a class="link-social-media" target="_blank" href="mailto:tecods8@gmail.com">
                         <li class="item-social-media">
-                            <i class="fab fa-google-plus-g"></i>
+                          <i class="far fa-envelope"></i>
                         </li>
                     </a>
-                    <a class="link-social-media" target="_blank" href="#">
+                    <a class="link-social-media" target="_blank" href="https://www.instagram.com/_ematch_/">
                         <li class="item-social-media">
-                            <i class="fab fa-linkedin-in"></i>
+                          <i class="fab fa-instagram"></i>
                         </li>
                     </a>
                 </ul>
-                <p>Dá uma olhada em nossas redes sociais</p>
             </div>  
           </div>
           </form>
@@ -80,6 +80,7 @@
           },1500);
         }
      </script>
+        
 
 </body>
 </html>
