--- a/cadastro.html
+++ b/cadastro.html
@@ -14,16 +14,16 @@
 </head>
 <body>
 
-    <div class="cont">
+     <div class="cont">
         <div class="loader"><span></span></div>
     </div>
 
     <div class="container">
         <div class="cover">
           <div class="front">
-            <img src="images/banner 2.png">
+            <img src="images/banner 2.png" alt="">
             <div class="text">
-              <span class="text-1"><em>"Um clique,</em> <br> <em>vidas transformadas"</em></span>
+              <span class="text-1">"Um clique, <br> vidas transformadas"</span>
               <span class="text-2">Crie sua Conta já</span>
             </div>
         </div>
