--- a/cadastro.html
+++ b/cadastro.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="cover">
           <div class="front">
-            <img src="images/banner 2.png" alt="">
+            <img src="images/banner 2.png">
             <div class="text">
               <span class="text-1">"Um clique, <br> vidas transformadas"</span>
               <span class="text-2">Crie sua Conta já</span>
