--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-    <link rel="shortcut icon" href="fav.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="ematch-fav.ico" type="image/x-icon">
     <title>Cadastro</title>
 </head>
 <body>
