--- a/candidato.html
+++ b/candidato.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="text"><a href="#">Esqueceu a senha?</a></div>
                   <div class="button input-box">
-                    <input type="submit" value="Entrar">
+                    <a href="perfil.html"><input class="aaa" type="button" value="Entrar"></a>
                   </div>
                   <div class="text sign-up-text">Não tem uma conta? <label for="flip">Cadastre-se agora</label></div>
                 </div>
@@ -80,7 +80,7 @@
                     <input type="password" placeholder="Crie uma senha" required>
                   </div>
                   <div class="button input-box">
-                    <input type="submit" value="Entrar">
+                    <a href="perfil.html"><input class="aaa" type="button" value="Entrar"></a>
                   </div>
                   <div class="text sign-up-text">Já possui uma conta? <label for="flip">Faça Login</label></div>
                 </div>
