--- a/empresa.html
+++ b/empresa.html
@@ -44,8 +44,8 @@
                     <input type="password" placeholder="Digite sua senha" required>
                   </div>
                   <div class="text"><a href="#">Esqueceu a senha?</a></div>
-                  <div class="button input-box">
-                    <input type="submit" value="Entrar">
+                   <div class="button input-box">
+                    <a href="perfil.html"><input class="aaa" type="button" value="Entrar"></a>
                   </div>
                   <div class="text sign-up-text">Não tem uma conta? <label for="flip">Cadastre-se agora</label></div>
                 </div>
@@ -84,8 +84,8 @@
                     <i class="fas fa-lock"></i>
                     <input type="password" placeholder="Crie uma senha" required>
                   </div>
-                  <div class="button input-box">
-                    <input type="submit" value="Entrar">
+                   <div class="button input-box">
+                    <a href="perfil.html"><input class="aaa" type="button" value="Entrar"></a>
                   </div>
                   <div class="text sign-up-text">Já possui uma conta? <label for="flip">Faça Login</label></div>
                 </div>
