--- a/perfil.html
+++ b/perfil.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ematch</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="ematch-fav.ico" type="image/x-icon">
     <script src="jquery-2.1.4.js"></script>
     <script src="https://kit.fontawesome.com/2986cff14b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
