--- a/perfil.html
+++ b/perfil.html
@@ -132,7 +132,7 @@
                     <div class="box">
                         <img src="images/marca_cesar_school.png" alt="Logomarca do Cesar School">
                         <div class="text">Cesar School</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Os candidatos devem possuir graduação superior em Ciência da Computação, Engenharia da computação, Sistemas de Informação e áreas afins.</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
