--- a/perfil.html
+++ b/perfil.html
@@ -120,7 +120,7 @@
                     <div class="box">
                         <img src="images/Porto Digital.png" alt="Logomarca do Porto Digital">
                         <div class="text">Porto Digital</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos pessoas que tenham proficiência em pelo menos uma linguagem de programação, transparência e capacidade para estabelecer relações de confiança</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -132,7 +132,7 @@
                     <div class="box">
                         <img src="images/marca_cesar_school.png" alt="Logomarca do Cesar School">
                         <div class="text">Cesar School</div>
-                        <p>Buscamos desenvolvedores de sistemas em todos os níveis para os cargos como engenharia de testes, de software e UX designer.</p>
+                        <p>Buscamos desenvolvedores de sistemas em todos os níveis para os cargos como engenharia de testes, de software e UX designer</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
