--- a/perfil.html
+++ b/perfil.html
@@ -120,7 +120,7 @@
                     <div class="box">
                         <img src="images/Porto Digital.png" alt="Logomarca do Porto Digital">
                         <div class="text">Porto Digital</div>
-                        <p>Buscamos pessoas que tenham proficiência em pelo menos uma linguagem de programação, transparência e capacidade para estabelecer relações de confiança</p>
+                        <p>Buscamos pessoas que tenham proficiência em pelo menos uma linguagem de programação, tenham foco em qualidade e atenção aos detalhes</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
