--- a/perfil.html
+++ b/perfil.html
@@ -59,7 +59,7 @@
             <h2 class="title">Sobre a Ematch</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile.jpg" alt="">
+                    <img src="images/profile.jpg">
                 </div>
                 <div class="column right">
                     <div class="text">Visamos <span class="typing-2"></span></div>
@@ -120,7 +120,7 @@
                     <div class="box">
                         <img src="images/Porto Digital.png" alt="Logomarca do Porto Digital">
                         <div class="text">Porto Digital</div>
-                        <p>Buscamos pessoas que tenham proficiência em pelo menos uma linguagem de programação, tenham foco em qualidade e atenção aos detalhes</p>
+                        <p>Buscamos pessoas que tenham proficiência em pelo menos uma linguagem de programação</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -144,7 +144,7 @@
                     <div class="box">
                         <img src="images/softex.png" alt="Logomarca da Softex">
                         <div class="text">Softex</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>>Buscamos pessoas proativas, organizadas e responsáveis quanto às atividades e horário de trabalho</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -156,7 +156,7 @@
                     <div class="box">
                         <img src="images/neurotech.png" alt="Logomarca da Neurotech">
                         <div class="text">Neurotech</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos Analista de Sistemas Pleno - Testes de Software, com perfil analítico e raciocínio rápido</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -166,9 +166,9 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/unitech.png" alt="Logomarca da Unitech">
-                        <div class="text">Unitech</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <img src="images/unitech.png" alt="Logomarca da Unitec">
+                        <div class="text">Unitec</div>
+                        <p>Buscamos um desenvolvedor junior para trabalhar com uma aplicação full stack web</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -180,7 +180,7 @@
                     <div class="box">
                         <img src="images/avanade.png" alt="Logomarca da Avanade">
                         <div class="text">Avanade</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos mulheres que tenham conhecimento de Node.Js e React.Js</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
