--- a/perfil.html
+++ b/perfil.html
@@ -144,7 +144,7 @@
                     <div class="box">
                         <img src="images/softex.png" alt="Logomarca da Softex">
                         <div class="text">Softex</div>
-                        <p>>Buscamos pessoas proativas, organizadas e responsáveis quanto às atividades e horário de trabalho</p>
+                        <p>Buscamos pessoas proativas, organizadas e responsáveis quanto às atividades e horário de trabalho </p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
