--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     </section>
   
 
+   
     <section class="skills" id="skills">
         <div class="max-width reveal">
             <h2 class="title">Encontre Empresas</h2>
@@ -108,7 +109,7 @@
                     <div class="box">
                         <img src="images/Porto Digital.png" alt="Logomarca do Porto Digital">
                         <div class="text">Porto Digital</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos pessoas que tenham proficiência em pelo menos uma linguagem de programação</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -120,7 +121,7 @@
                     <div class="box">
                         <img src="images/marca_cesar_school.png" alt="Logomarca do Cesar School">
                         <div class="text">Cesar School</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos desenvolvedores de sistemas em todos os níveis para os cargos como engenharia de testes, de software e UX designer</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -132,7 +133,7 @@
                     <div class="box">
                         <img src="images/softex.png" alt="Logomarca da Softex">
                         <div class="text">Softex</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos pessoas proativas, organizadas e responsáveis quanto às atividades e horário de trabalho </p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -144,7 +145,7 @@
                     <div class="box">
                         <img src="images/neurotech.png" alt="Logomarca da Neurotech">
                         <div class="text">Neurotech</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos Analista de Sistemas Pleno - Testes de Software, com perfil analítico e raciocínio rápido</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -154,9 +155,9 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/unitech.png" alt="Logomarca da Unitech">
-                        <div class="text">Unitech</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <img src="images/unitech.png" alt="Logomarca da Unitec">
+                        <div class="text">Unitec</div>
+                        <p>Buscamos um desenvolvedor junior para trabalhar com uma aplicação full stack web</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
@@ -168,7 +169,7 @@
                     <div class="box">
                         <img src="images/avanade.png" alt="Logomarca da Avanade">
                         <div class="text">Avanade</div>
-                        <p>Procuramos pessoas com *esse perfil*</p>
+                        <p>Buscamos mulheres que tenham conhecimento de Node.Js e React.Js</p>
                         <div class="color">
                             <span>✓</span>
                             <span>X</span>
