--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="ematch-fav.ico" type="image/x-icon">
     <script src="jquery-2.1.4.js"></script>
+    <script src="https://kit.fontawesome.com/2986cff14b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -34,6 +35,7 @@
                 <li><a href="#skills" class="menu-btn">Empresas</a></li>
                 <li><a href="#teams" class="menu-btn">Pessoas</a></li>
                 <li><a href="#contact" class="menu-btn">Contato</a></li>
+                <li><a href="#" class="menu-btn">Perfil</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -57,11 +59,21 @@
             <h2 class="title">Sobre a Ematch</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile.jpg" alt="">
+                    <img src="images/profile.jpg">
                 </div>
                 <div class="column right">
                     <div class="text">Visamos <span class="typing-2"></span></div>
-                    <p>Levando em consideração o alto índice de desempregados no país, as consequências sociais e econômicas que emergem deste caso e as dificuldades de arrumar emprego para moradores de lugares de difícil acesso, além de suas dificuldades com internet e meios de comunicação (redes sociais), esse público alvo precisaria de algo mais prático e tangível para todas as classes e grupos sociais. Visando estes pontos citados, criamos o Ematch; um site de fácil acessibilidade por smartphones e computadores com o objetivo de criar uma relação mais simples entre Empresas e Desempregados.</p>
+
+                    <p><b>Ematch</b> é um site de fácil acessibilidade para smartphones e computadores com o objetivo de  relacionar <u>empresas</u> e <u>candidatos</u> de maneira mais prática.</p>
+
+                    <p>Como incentivo à criação desse site, levamos em consideração:</p>
+
+                    <p>• <b>O índice elevado</b> de desempregados no Brasil</p>
+
+                    <p>• <b>As consequências sociais e econômicas</b> que emergem desse caso</p>
+
+                    <p>• <b>As dificuldades de moradores</b> que estão em lugares de difícil acesso para distribuir currículo e seus, também, problemas com internet.</p>
+
                     <a href="#">Saiba mais</a>
                 </div>
             </div>
@@ -77,7 +89,7 @@
                     <div class="box">
                         <i class="fas fa-user-friends"></i>
                         <div class="text">Interação</div>
-                        <p>Disponibilizamos um meio de interação para conectar desempregados a empresas </p>
+                        <p>Disponibilizamos um meio de interação para conectar candidatos a empresas </p>
                     </div>
                 </div>
                 <div class="card">
@@ -91,7 +103,7 @@
                     <div class="box">
                         <i class="fas fa-address-card"></i>
                         <div class="text">Entrega Inteligente</div>
-                        <p>Fornecemos uma forma de Entrega Inteligente de currículos para quem está precisando de emprego</p>
+                        <p>Fornecemos uma Entrega Inteligente de currículos para quem está precisando de emprego</p>
                     </div>
                 </div>
                </div>
@@ -100,7 +112,6 @@
     </section>
   
 
-   
     <section class="skills" id="skills">
         <div class="max-width reveal">
             <h2 class="title">Encontre Empresas</h2>
@@ -341,10 +352,10 @@
             }
         }
     }
+
     </script>
 
-    <script>
-      
+<script>
     const loader = document.querySelector(".cont");
     window.onload = function(){
       setTimeout(function(){
@@ -354,7 +365,7 @@
         }, 500);
       },1500);
     }
-    </script>
+ </script>
     
     <script src="script.js"></script>
 
